# Cp-swarm

./: .env.example  .gitignore  Dockerfile  README.md  benchmark.py  cli.py  pyproject.toml  render.yaml  requirements.txt  web_server.py
agents/: adversary.py  architect.py  base_agent.py  mathematician.py
config/: __init__.py  settings.py
config/prompts/: adversary.md  architect.md  mathematician.md
execution/: compiler.py  resource_limits.py  runner.py  sandbox.py
logs/: benchmark_report.md
orchestrator/: pipeline.py  policies.py  state.py
problems/: schema.py
problems/benchmarks/: binary_search_answer.txt  coin_change.txt  longest_substring.txt  prefix_sum.txt  two_sum.txt
problems/samples/: max_subarray_with_removal.txt
static/: app.js  index.html  style.css
tests/: test_agents_mocked.py  test_benchmark.py  test_compiler.py  test_pipeline_e2e.py  test_runner.py
